--- a/analysis/tritium/tritium_model.ipynb
+++ b/analysis/tritium/tritium_model.ipynb
@@ -9,6 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Processed data file not found, creating it in ../../data/processed_data.json\n",
       "Processed data stored in ../../data/processed_data.json\n"
      ]
     },
@@ -324,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
